# OpenGL-TinyRenderer

./: .gitignore  CMakeLists.txt  OpenGL TinyRenderer.sln
OpenGL TinyRenderer/: OpenGL TinyRenderer.vcxproj  OpenGL TinyRenderer.vcxproj.filters  index_buffer.cpp  main.cpp  mesh_data.h  opengl_renderer.cpp  opengl_renderer.h  render_object.h  rotating_vertex.glsl  shader_program.cpp  shader_program.h  texture2d.cpp  texture2d.h  util.cpp  util.h  vertex_array.cpp  vertex_buffer.cpp  vertex_buffer_layout.h
OpenGL TinyRenderer/resources/shaders/: basic_fragment.glsl  basic_vertex.glsl
glimg/: CMakeLists.txt  enum_types.h  glbmp_loader.cpp  glbmp_loader.h  gldds_loader.cpp  gldds_loader.h  glimage.cpp  glimage.h  glimg_c.h  glimg_file.h  glpng_loader.cpp  glpng_loader.h  test_main.cpp  util.h  win32_glimg_file.cpp
resources/shaders/: base_mat_frag.glsl  base_mat_vert.glsl  basic_fragment.glsl  basic_vertex.glsl  checker_texture_frag.glsl  test_texture_frag.glsl  test_texture_vert.glsl  tex_gauss_fragment.glsl  wireframe_fragment.glsl
resources/textures/: checker_dds.dds  coronodds.dds  testtestdds.dds
src/: base_camera.cpp  base_camera.h  gl_sampler.cpp  gl_sampler.h  index_buffer.h  main.cpp  mesh_data.h  opengl_renderer.cpp  opengl_renderer.h  opengl_util.h  pos.h  quaternion.h  render_material.cpp  render_material.h  render_object.cpp  render_object.h  sampler2d.cpp  sampler2d.h  shader_program.cpp  shader_program.h  texture1d.cpp  texture1d.h  texture2d.cpp  texture2d.h  tiny_renderer.cpp  tiny_renderer.h  tiny_renderer_c.h  tiny_renderer_input.h  tiny_renderer_state.cpp  tiny_renderer_state.h  util.cpp  util.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.cpp
src/win32/: win32_tinyrenderer.cpp  win32_tinyrenderer.h
